add map country add footer add statisctic update base

--- a/markup/pages/test.html
+++ b/markup/pages/test.html
@@ -1117,7 +1117,7 @@
                         <div class="uk-hero-background">
                             <img src="%=static=%img/content/hero-image-2.jpg" alt="">
                         </div>
-                        <div class="uk-hero-overlay uk-background-muted"></div>
+                        <div class="uk-hero-overlay uk-background-secondary"></div>
                         <div class="uk-hero-foreground">
                             <div class="uk-hero-header">
                                 <nav class="uk-navbar-container uk-navbar-transparent">
@@ -1207,7 +1207,7 @@
                         <div class="uk-hero-background">
                             <img src="%=static=%img/content/full-person.jpg" alt="">
                         </div>
-                        <div class="uk-hero-overlay uk-background-muted"></div>
+                        <div class="uk-hero-overlay uk-background-secondary"></div>
                         <div class="uk-hero-foreground">
                             <div class="uk-hero-header">
                                 <nav class="uk-navbar-container uk-navbar-transparent">
@@ -1348,7 +1348,142 @@
                             </div>
                         </div>
                     </div>
-        
+
+                    <footer class="uk-footer">
+                        <div class="uk-footer-top">
+                            <div class="uk-container">
+                                <div class="uk-grid uk-child-width-1-4@m uk-footer-navs">
+                                    <div class="uk-footer-item">
+                                        <div class="uk-footer-label">Автосалоны</div>
+                                        <ul class="uk-footer-nav">
+                                            <li><a href="#">Mercedes-Benz</a></li>
+                                            <li><a href="#">Volkswagen</a></li>
+                                            <li><a href="#">Renault</a></li>
+                                            <li><a href="#">Opel</a></li>
+                                            <li><a href="#">Skoda</a></li>
+                                            <li><a href="#">Ravon</a></li>
+                                            <li class="uk-footer-nav-bottom"><a href="#">Авто в наличии</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="uk-footer-item">
+                                        <div class="uk-footer-label">Грузовая техника</div>
+                                        <ul class="uk-footer-nav">
+                                            <li><a href="#">Mercedes-Benz</a></li>
+                                            <li><a href="#">IVECO</a></li>
+                                            <li><a href="#">Hyundai</a></li>
+                                            <li><a href="#">Isuzu</a></li>
+                                            <li><a href="#">DAF сервис</a></li>
+                                            <li><a href="#">Ford Trucks сервис</a></li>
+                                            <li><a href="#">Кияшко прицепы</a></li>
+                                            <li class="uk-footer-nav-bottom"><a href="#">Акции</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="uk-footer-item">
+                                        <div class="uk-footer-label">Услуги</div>
+                                        <ul class="uk-footer-nav">
+                                            <li><a href="#">Сервис</a></li>
+                                            <li><a href="#">Запасные части</a></li>
+                                            <li><a href="#">Финансовый сервис</a></li>
+                                            <li><a href="#">Корпоративным клиентам</a></li>
+                                            <li><a href="#">Trade-in</a></li>
+                                            <li><a href="#">VIP Taxi</a></li>
+                                            <li><a href="#">PARK DRIVE</a></li>
+                                            <li class="uk-footer-nav-bottom"><a href="#">Новости</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="uk-footer-item">
+                                        <div class="uk-footer-label">О компании</div>
+                                        <ul class="uk-footer-nav">
+                                            <li><a href="#">История компании</a></li>
+                                            <li><a href="#">Наша философия</a></li>
+                                            <li><a href="#">Истории успеха сотрудников</a></li>
+                                            <li><a href="#">Руководство</a></li>
+                                            <li><a href="#">Партнеры</a></li>
+                                            <li><a href="#">Сотрудничество</a></li>
+                                            <li><a href="#">Вакансии</a></li>
+                                            <li><a href="#">Сувениры</a></li>
+                                            <li><a href="#">Контакты</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-footer-bottom">
+                            <div class="uk-container">
+                                <div class="uk-copyrightes">
+                                    <div class="uk-copyright">© 2017. Все права защищены. <br> Солли Плюс — Международный автомобильный холдинг.</div>
+                                    <div class="uk-copyright-dev">{{Icon iconName="fulltime"}} Сайт создан веб-студией «Фултайм»</div>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>
+
+                    <div class="uk-section uk-section-about-us">
+                        <div class="uk-section-background uk-background-muted"></div>
+                        <div class="uk-section-foreground">
+                            <div class="uk-container">
+                                <h3 class="uk-heading">Главная цель компании «Солли Плюс» — установить долгосрочные партнерские отношения</h3>
+                                <div class="uk-grid uk-child-width-1-2@m" data-uk-grid>
+                                    <div>
+                                        <p>В лице компании «Солли-Плюс» вы всегда найдете ответственного партнера, который несет обязательства по отношению к своим клиентам и проявляет заботу о них.</p>
+                                        <p><a href="#">История компании</a></p>
+                                    </div>
+                                    <div>
+                                        <div class="uk-card-statistic">
+                                            <div class="uk-card-value">39 700 клиентов</div>
+                                            <div class="uk-card-description">Главная цель компании «Солли-Плюс» — установить долгосрочные партнерские отношения</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="uk-grid uk-flex-right@m uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" data-uk-grid>
+                                    <div>
+                                        <div class="uk-card-statistic-secondary">
+                                            <div class="uk-card-value">25 лет</div>
+                                            <div class="uk-card-description">На автомобильном рынке Украины</div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-card-statistic-secondary">
+                                            <div class="uk-card-value">574</div>
+                                            <div class="uk-card-description">Новых автомобилей в наличии</div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-card-statistic-secondary">
+                                            <div class="uk-card-value">17</div>
+                                            <div class="uk-card-description">Салонов и сервисных центров</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="uk-section uk-section-map-country">
+                        <div class="uk-section-background uk-map-country">
+                            <img data-uk-svg class="uk-preserve" src="%=static=%img/general/map.svg" alt="">
+                        </div>
+                        <div class="uk-section-foreground">
+                            <div class="uk-container">
+                                <div class="uk-width-2-3@s uk-width-1-3@l">
+                                    <p class="uk-lead">
+                                        Солли Плюс — открытая и дружелюбная команда профессионалов. Нам важно мнение наших клиентов. Благодаря вам мы становимся лучше.
+                                    </p>
+                                    <div class="uk-card uk-card-person-2">
+                                        <div class="uk-card-top">
+                                            <div class="uk-card-person-avatar">
+                                                <img src="%=static=%img/content/person.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="uk-card-body">
+                                            <div class="uk-card-person-name">Пучков Олег Алексеевич</div>
+                                            <div class="uk-card-person-position">Генеральный директор холдинга Солли Плюс</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>        
                 </div>
             </div>
         </div>
