--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -54,6 +54,7 @@
 									</a>
 								</li>
 							</ul>
+
 							<ul class="uk-child-width-1-4@s" uk-grid>
 								<li>
 									<a href="#" class="uk-card-model">
@@ -100,6 +101,7 @@
 									</a>
 								</li>
 							</ul>
+
 							<div class="uk-info-box">
 								<div class="uk-row">
 									<div class="uk-col">
@@ -154,6 +156,7 @@
 									</div>
 								</div>
 							</div>
+
 							<div class="uk-info-box uk-info-2 ">
 								<div class="uk-row">
 									<div class="uk-col">
@@ -192,6 +195,7 @@
 									</div>
 								</div>
 							</div>
+
 							<section class="uk-services uk-section">
 								<h3 class="uk-text-center">Услуги сервиса Солли Плюс</h3>
 								<ul class="uk-list-services uk-child-width-1-3@s uk-grid-match" uk-grid>
@@ -237,6 +241,7 @@
 									</li>
 								</ul>
 							</section>
+
 							<ul class="uk-list-stock uk-child-width-1-2@s" uk-grid>
 								<li>
 									<a href="#" class="uk-card-stock uk-background-2 uk-light">
@@ -344,6 +349,7 @@
 									</a>
 								</li>
 							</ul>
+
 							<ul class="uk-list-certificates uk-child-width-1-5@s" uk-grid>
 								<li>
 									<a href="#" class="uk-card-certificate">
@@ -371,6 +377,7 @@
 									</a>
 								</li>
 							</ul>
+
 							<section class="uk-news uk-section">
 								<div class="uk-list-news uk-grid-match" uk-grid>
 									<article class="uk-news-item">
@@ -459,6 +466,7 @@
 									</article>
 								</div>
 							</section>
+
 							<div class="uk-list-cars uk-child-width-1-3@s uk-grid-match" uk-grid>
 								<article class="uk-list-item">
 									<a href="#" class="uk-card-car">
@@ -529,6 +537,7 @@
 									</a>
 								</article>
 							</div>
+
 							<ul class="uk-list-partners uk-child-width-1-5@s uk-grid-match" uk-grid>
 								<li class="uk-list-item">
 									<div class="uk-card-partner">
@@ -556,6 +565,70 @@
 									</div>
 								</li>
 							</ul>
+
+							<section class="uk-section-contacts">
+								<h2 class="uk-salon-address">ул. Академика Павлова, 323</h2>
+								<a href="#" class="uk-map-reference">Посмотреть фото и расположение на карте</a>
+								<div class="uk-row-contacts uk-child-width-1-3@s" uk-grid>
+									<div class="uk-col-contacts">
+										<div class="uk-phone-holder">
+											<div class="uk-phone-block">
+												<h6 class="uk-contact-title">Отдел продаж</h6>
+												<a href="tel:0577525777" class="uk-contact-phone">(057) 752-57-77</a>
+												<a href="tel:0670000000" class="uk-contact-phone">(067) 000-00-00</a>
+											</div>
+										</div>
+										<div class="uk-schedule-block">
+											<h6 class="uk-contact-title">Понедельник–Пятница</h6>
+											<span class="uk-working-hours">с 8:00 до 20:00</span>
+											<h6 class="uk-contact-title">Суббота</h6>
+											<span class="uk-working-hours">с 9:00 до 18:00</span>
+											<h6 class="uk-contact-title">Воскресерье</h6>
+											<span class="uk-working-hours uk-text-danger">выходной</span>
+										</div>
+									</div>
+									<div class="uk-col-contacts">
+										<div class="uk-phone-holder">
+											<div class="uk-phone-block">
+												<h6 class="uk-contact-title">Сервис</h6>
+												<a href="tel:057000000" class="uk-contact-phone">(057) 00-00-00</a>
+											</div><div class="uk-phone-block">
+												<h6 class="uk-contact-title">Отдел продаж</h6>
+												<a href="tel:057000000" class="uk-contact-phone">(057) 00-00-00</a>
+											</div>
+										</div>
+										<div class="uk-schedule-block">
+											<h6 class="uk-contact-title">Понедельник–Пятница</h6>
+											<span class="uk-working-hours">с 8:00 до 20:00</span>
+											<h6 class="uk-contact-title">Суббота</h6>
+											<span class="uk-working-hours">с 9:00 до 18:00</span>
+											<h6 class="uk-contact-title">Воскресерье</h6>
+											<span class="uk-working-hours">с 9:00 до 18:00</span>
+										</div>
+									</div>
+									<div class="uk-col-contacts">
+										<div class="uk-contact-block">
+											<h6 class="uk-contact-title">Сайт</h6>
+											<a href="https://renault.kharkiv.ua">renault.kharkiv.ua</a>
+										</div>
+										<div class="uk-contact-block">
+											<h6 class="uk-contact-title">Сайт</h6>
+											<a href="mailto:renault@sollyplus.com.ua">renault@sollyplus.com.ua</a>
+										</div>
+										<div class="uk-social-block">
+												<h6 class="uk-contact-title">Социальные сети</h6>
+												<ul class="uk-social-networks">
+													<li class="uk-social-item"><a href="#">Facebook</a></li>
+													<li class="uk-social-item"><a href="#">Instagram</a></li>
+													<li class="uk-social-item"><a href="#">Linkedin</a></li>
+													<li class="uk-social-item"><a href="#">Youtube</a></li>
+													<li class="uk-social-item"><a href="#">Pinterest</a></li>
+													<li class="uk-social-item"><a href="#">Google+</a></li>
+												</ul>
+										</div>
+									</div>
+								</div>
+							</section>
 						</div>	
 					</div>
         </div>
