--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -12,7 +12,7 @@
 					<div class="uk-page-body">
 						<div class="uk-container uk-container-expand">
 							<h1>Components page</h1>
-							<ul class="uk-child-width-1-5@s" uk-grid>
+							<ul class="uk-child-width-1-5@s uk-grid" data-uk-grid>
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
@@ -55,7 +55,7 @@
 								</li>
 							</ul>
 
-							<ul class="uk-child-width-1-4@s" uk-grid>
+							<ul class="uk-child-width-1-4@s uk-grid" data-uk-grid>
 								<li>
 									<a href="#" class="uk-card-model">
 										<div class="uk-card-img">
@@ -122,6 +122,7 @@
 										<div class="uk-card-info uk-card-info-2">
 											<div class="uk-card-foreground">
 												<div class="card-body">
+													<span class="uk-card-icon">{{Icon iconName="crediting"}}</span>
 													<h2 class="uk-card-title">Кредитование</h2>
 													<p>Cпециальные кредитные программы разработанные совместно с нашими финансовыми партнерами</p>
 												</div>
@@ -148,6 +149,7 @@
 										<div class="uk-card-info uk-card-info-2">
 											<div class="uk-card-foreground">
 												<div class="card-body">
+													<span class="uk-card-icon">{{Icon iconName="trade-in"}}</span>
 													<h2 class="uk-card-title">Trade-in</h2>
 													<p>Вы сдаете нам свой подержанный автомобиль и уезжаете от нас на новом</p>
 												</div>
@@ -198,7 +200,7 @@
 
 							<section class="uk-services uk-section">
 								<h3 class="uk-text-center">Услуги сервиса Солли Плюс</h3>
-								<ul class="uk-list-services uk-child-width-1-3@s uk-grid-match" uk-grid>
+								<ul class="uk-list-services uk-child-width-1-3@s uk-grid-match uk-grid" data-uk-grid>
 									<li>
 										<a href="#" class="uk-card-service">
 											<strong>Техническое	обслуживание</strong>
@@ -242,7 +244,7 @@
 								</ul>
 							</section>
 
-							<ul class="uk-list-stock uk-child-width-1-2@s" uk-grid>
+							<ul class="uk-list-stock uk-child-width-1-2@s" data-uk-grid>
 								<li>
 									<a href="#" class="uk-card-stock uk-background-2 uk-light">
 										<span class="city">Renault Харьков, Полтава</span>
@@ -350,7 +352,7 @@
 								</li>
 							</ul>
 
-							<ul class="uk-list-certificates uk-child-width-1-5@s" uk-grid>
+							<ul class="uk-list-certificates uk-child-width-1-5@s uk-grid" data-uk-grid>
 								<li>
 									<a href="#" class="uk-card-certificate">
 										<img src="%=static=%img/content/certificate-1.jpg" alt="certificate-1">
@@ -467,7 +469,7 @@
 								</div>
 							</section>
 
-							<div class="uk-list-cars uk-child-width-1-3@s uk-grid-match" uk-grid>
+							<div class="uk-list-cars uk-child-width-1-3@s uk-grid-match uk-grid" data-uk-grid>
 								<article class="uk-list-item">
 									<a href="#" class="uk-card-car">
 										<div class="uk-card-img"><img src="%=static=%img/content/car-img-1.jpg" alt="car"></div>
@@ -538,7 +540,7 @@
 								</article>
 							</div>
 
-							<ul class="uk-list-partners uk-child-width-1-5@s uk-grid-match" uk-grid>
+							<ul class="uk-list-partners uk-child-width-1-5@s uk-grid-match uk-grid" data-uk-grid>
 								<li class="uk-list-item">
 									<div class="uk-card-partner">
 										<img src="%=static=%img/content/partner-logo-2.png" alt="partner">
@@ -566,10 +568,10 @@
 								</li>
 							</ul>
 
-							<section class="uk-section-contacts">
+							<section class="uk-section-contacts uk-section">
 								<h2 class="uk-salon-address">ул. Академика Павлова, 323</h2>
-								<a href="#" class="uk-map-reference">Посмотреть фото и расположение на карте</a>
-								<div class="uk-row-contacts uk-child-width-1-3@s" uk-grid>
+								<a href="#" class="uk-link">Посмотреть фото и расположение на карте</a>
+								<div class="uk-row-contacts uk-child-width-1-3@m uk-grid" data-uk-grid>
 									<div class="uk-col-contacts">
 										<div class="uk-phone-holder">
 											<div class="uk-phone-block">
@@ -609,11 +611,11 @@
 									<div class="uk-col-contacts">
 										<div class="uk-contact-block">
 											<h6 class="uk-contact-title">Сайт</h6>
-											<a href="https://renault.kharkiv.ua">renault.kharkiv.ua</a>
+											<a href="https://renault.kharkiv.ua" class="uk-contact-site">srenault.kharkiv.ua</a>
 										</div>
 										<div class="uk-contact-block">
-											<h6 class="uk-contact-title">Сайт</h6>
-											<a href="mailto:renault@sollyplus.com.ua">renault@sollyplus.com.ua</a>
+											<h6 class="uk-contact-title">Эл. почта</h6>
+											<a href="mailto:renault@sollyplus.com.ua" class="uk-contact-email">renault@sollyplus.com.ua</a>
 										</div>
 										<div class="uk-social-block">
 												<h6 class="uk-contact-title">Социальные сети</h6>
@@ -629,6 +631,199 @@
 									</div>
 								</div>
 							</section>
+
+							<ul class="uk-list-vacancy uk-grid uk-child-width-1-1" data-uk-grid>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer"><img src="%=static=%img/content/skoda.png" alt="skoda"></div>
+										<h6 class="uk-card-title">Финансовый консультант по кредитованию и страхованию</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Škoda</li>
+											<li class="uk-footer-item">Харьков</li>
+										</ul>
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer"><img src="%=static=%img/content/ravon.png" alt="ravon"></div>
+										<h6 class="uk-card-title">Автомойщик</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Ravon</li>
+											<li class="uk-footer-item">Харьков</li>
+										</ul>
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer"><img src="%=static=%img/content/mitsubushi.png" alt="mitsubushi"></div>
+										<h6 class="uk-card-title">Менеджер по продажам автомобилей</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Mitsubishi</li>
+											<li class="uk-footer-item">Полтава</li>
+										</ul>
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer"><img src="%=static=%img/content/renault.png" alt="renault"></div>
+										<h6 class="uk-card-title">Администратор автосалона</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Renault</li>
+											<li class="uk-footer-item">Полтава</li>
+										</ul>
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer"><img src="%=static=%img/content/vw.png" alt="volkswagen"></div>
+										<h6 class="uk-card-title">Менеджер по работе с клиентами (администратор сервиса)</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Volkswagen</li>
+											<li class="uk-footer-item">Запорожье</li>
+										</ul>
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer">{{Icon iconName="arrow-right"}}</div>
+										<h6 class="uk-card-title">Ведущий маркетолог</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Солли Плюс</li>
+											<li class="uk-footer-item">Харьков</li>
+										</ul>
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-vacancy">
+										<div class="uk-logo-dealer"><img src="%=static=%img/content/mercedes-benz.png" alt="mercedes-benz"></div>
+										<h6 class="uk-card-title">Специалист отдела корпоративных продаж</h6>
+										<ul class="uk-card-footer">
+											<li class="uk-footer-item">от 5 000 грн</li>
+											<li class="uk-footer-item">Mercedes-Benz</li>
+											<li class="uk-footer-item">Харьков</li>
+										</ul>
+									</a>
+								</li>
+							</ul>
+
+							<article class="uk-article">
+								<h1 class="uk-article-title">Однако ещё большее восхищение вызвала подвеска</h1>
+								<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд и его коллеги из Renault Design, которые провели мастер-классы, в том числе и по цифровому рисунку, с участием дизайнеров Эрде Тунга и Андрея Басманова. Результаты своей работы команды.</p>
+								<div class="uk-grid uk-flex-middle uk-margin-large" data-uk-grid>
+									<div class="uk-width-2-5@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+									<div class="uk-width-3-5@m">
+										<h5>На конкурс Renault представили свои работы студенты столичных вузов</h5>
+										<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд.</p>
+									</div>
+								</div>
+								<p><i>На конкурс Renault</i> представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы <b>Renault Энтони Грейд</b> и его коллеги из Renault Design, которые <abbr title="Title text">провели мастер-классы</abbr>, в том числе и <a href="#">по цифровому рисунку</a>, с участием дизайнеров <strike>Эрде Тунга</strike> и Андрея Басманова. Результаты своей работы команды.</p>
+								<div class="uk-grid uk-flex-middle uk-margin-large" data-uk-grid>
+									<div class="uk-width-3-5@m">
+										<h5>Renault — партнер нового сезона недели моды</h5>
+										<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд.</p>
+									</div>
+									<div class="uk-width-2-5@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+								</div>
+								<h2 class="uk-margin-medium-bottom">Renault EZ-GO: мировая премьера концепта электрического общественного транспорта</h2>
+								<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд и его коллеги из Renault Design, которые провели мастер-классы, в том числе и по цифровому рисунку, с участием дизайнеров Эрде Тунга и Андрея Басманова. Результаты своей работы команды.</p>
+								<p>EZ-GO построен не по классической схеме, а на основе инновационной архитектуры в форме кокона. Это дает датчикам робомобиля максимальное поле зрения и обеспечивает салон естественным освещением через панорамную стеклянную крышу.</p>
+								<div class="uk-btn-link-holder uk-margin-large-bottom">
+									<a href="#" class="uk-btn-link">Руководство по эксплуатации Renault Koleos.pdf</a>
+									<a href="#" class="uk-btn-link">Гарантийные условия.pdf</a>
+									<a href="#" class="uk-btn-link">Правила технического обслуживания автомобилей Renault Koleos.pdf</a>										
+								</div>
+								<div class="uk-width-1-1">
+									<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+								</div>
+								<ul class="uk-list uk-margin-large">
+									<li>Volkswagen Jetta является седаном в классическом исполнении с гармоничными пропорциями. Четкие формы, приятные 					очертания задней части, большие колёса и обтекаемый силуэт — это те свойства, которые придают автомобилю одновременно спортивный и элегантный облик.
+										<ul>
+											<li>Volkswagen Jetta является седаном в классическом исполнении с гармоничными пропорциями. Четкие формы, приятные очертания задней части, большие колёса и обтекаемый силуэт — это те свойства, которые придают автомобилю одновременно спортивный и элегантный облик.
+												<ul>
+													<li>Volkswagen Jetta является седаном в классическом исполнении с гармоничными пропорциями. Четкие формы, приятные очертания задней части, большие колёса и обтекаемый силуэт — это те свойства, которые придают автомобилю одновременно спортивный и элегантный облик.</li>
+												</ul>
+											</li>
+										</ul>
+									</li>
+									<li>Volkswagen Jetta является седаном в классическом исполнении с гармоничными пропорциями. Четкие формы, приятные очертания задней части, большие колёса и обтекаемый силуэт — это те свойства, которые придают автомобилю одновременно спортивный и элегантный облик.</li>
+								</ul>
+								<div class="uk-grid uk-margin-large" data-uk-grid>
+									<div class="uk-width-1-3@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+									<div class="uk-width-1-3@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+									<div class="uk-width-1-3@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+								</div>
+								<h3 class="uk-margin-medium-bottom">Renault EZ-GO: мировая премьера концепта электрического общественного транспорта</h3>
+								<p>EZ-GO построен не по классической схеме, а на основе инновационной архитектуры в форме кокона. Это дает датчикам робомобиля максимальное поле зрения и обеспечивает салон естественным освещением через панорамную стеклянную крышу.</p>
+								<div class="uk-grid uk-flex-middle" data-uk-grid>
+									<div class="uk-width-2-5@m">
+										<div class="uk-video-holder uk-border-rounded">
+											<div class="uk-video-background">
+												<img src="%=static=%img/content/news-img-2.jpg" alt="">
+											</div>
+											<div class="uk-video-overlay"></div>
+											<div class="uk-video-foreground" uk-lightbox>
+												<a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-btn-video-link">{{Icon iconName="play-circle"}}</a>
+											</div>
+										</div>
+									</div>
+									<div class="uk-width-3-5@m">
+										<h5>Renault — партнер нового сезона недели моды</h5>
+										<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд.</p>
+									</div>
+								</div>
+							</article>
+
+							<article class="uk-article">
+								<h3>Предложение действует с <b>1 ноября</b> по <b>22 декабря 2018</b></h3>
+								<div class="uk-grid uk-flex-middle" data-uk-grid>
+									<div class="uk-width-2-5@m">
+										<div class="uk-video-holder uk-border-rounded">
+											<div class="uk-video-background">
+												<img src="%=static=%img/content/news-img-2.jpg" alt="">
+											</div>
+											<div class="uk-video-overlay"></div>
+											<div class="uk-video-foreground" uk-lightbox>
+												<a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-btn-video-link">{{Icon iconName="play-circle"}}</a>
+											</div>
+										</div>
+									</div>
+									<div class="uk-width-3-5@m">
+										<h5>Renault — партнер нового сезона недели моды</h5>
+										<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд.</p>
+									</div>
+								</div>
+								<h3 class="uk-margin-medium-bottom">Renault EZ-GO: мировая премьера концепта электрического общественного транспорта</h3>
+								<p>EZ-GO построен не по классической схеме, а на основе инновационной архитектуры в форме кокона. Это дает датчикам робомобиля максимальное поле зрения и обеспечивает салон естественным освещением через панорамную стеклянную крышу.</p>
+								<div class="uk-grid uk-margin-large" data-uk-grid>
+									<div class="uk-width-1-3@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+									<div class="uk-width-1-3@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+									<div class="uk-width-1-3@m">
+										<img src="%=static=%img/content/news-img-2.jpg" alt="" class="uk-border-rounded">
+									</div>
+								</div>
+								<h2 class="uk-margin-medium-bottom">Однако ещё большее восхищение вызвала подвеска</h2>
+								<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд и его коллеги из Renault Design, которые провели мастер-классы, в том числе и по цифровому рисунку, с участием дизайнеров Эрде Тунга и Андрея Басманова. Результаты своей работы команды.</p>
+							</article>
 						</div>	
 					</div>
         </div>
