--- a/markup/pages/_template.html
+++ b/markup/pages/_template.html
@@ -14,7 +14,11 @@
                 {{> header/header dealers=false}}
             </div>
 
-            <div class="uk-page-body"></div>
+            <div class="uk-page-body">
+                <!-- content -->
+                
+                {{> footer/footer}}
+            </div>
 
         </div>
 
