--- a/markup/pages/article.html
+++ b/markup/pages/article.html
@@ -156,7 +156,7 @@
 									</article>
 								</div>
 							</section>
-              {{> footer/footer}}
+              {{> footer/footer visible=true}}
             </div>
 
         </div>
