--- a/markup/pages/stock-empty.html
+++ b/markup/pages/stock-empty.html
@@ -106,7 +106,7 @@
 							</div>
 						</section>
 						
-						{{> footer/footer}}
+						{{> footer/footer visible=true}}
 					</div>
 
         </div>
