--- a/markup/pages/news.html
+++ b/markup/pages/news.html
@@ -152,7 +152,7 @@
 								</div>
 							</section>
                 
-              {{> footer/footer}}
+              {{> footer/footer visible=true}}
             </div>
 
         </div>
