--- a/markup/pages/_template.html
+++ b/markup/pages/_template.html
@@ -17,7 +17,7 @@
             <div class="uk-page-body">
                 <!-- content -->
                 
-                {{> footer/footer}}
+                {{> footer/footer visible=true}}
             </div>
 
         </div>
