--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -244,7 +244,7 @@
 								</ul>
 							</section>
 
-							<ul class="uk-list-stock uk-child-width-1-2@s" data-uk-grid>
+							<ul class="uk-grid uk-list-stock uk-child-width-1-2@s" data-uk-grid>
 								<li>
 									<a href="#" class="uk-card-stock uk-background-2 uk-light">
 										<span class="city">Renault Харьков, Полтава</span>
@@ -381,7 +381,7 @@
 							</ul>
 
 							<section class="uk-news uk-section">
-								<div class="uk-list-news uk-grid-match" uk-grid>
+								<div class="uk-grid uk-list-news uk-grid-match" data-uk-grid>
 									<article class="uk-news-item">
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-1.jpg" alt="img"></div>
