--- a/markup/pages/news.html
+++ b/markup/pages/news.html
@@ -62,7 +62,7 @@
 											</div>
 										</div>
 									</form>
-									<div class="uk-list-news uk-grid-match" uk-grid>
+									<div class="uk-grid uk-list-news uk-grid-match" data-uk-grid>
 										<article class="uk-news-item">
 											<a href="#" class="uk-card-news">
 												<div class="uk-card-img"><img src="%=static=%img/content/news-img-1.jpg" alt="img"></div>
