--- a/markup/pages/stocks.html
+++ b/markup/pages/stocks.html
@@ -56,7 +56,7 @@
 									</div>
 								</div>
 							</form>
-							<ul class="uk-list-stock uk-child-width-1-2@s" data-uk-grid>
+							<ul class="uk-grid uk-list-stock uk-child-width-1-2@s" data-uk-grid>
 								<li>
 									<a href="#" class="uk-card-stock uk-background-2 uk-light">
 										<span class="city">Renault Харьков, Полтава</span>
