--- a/markup/pages/stock-empty.html
+++ b/markup/pages/stock-empty.html
@@ -66,7 +66,7 @@
 										<button class="uk-button-link uk-button"><span class="uk-btn-icon">{{Icon iconName="send"}}</span> Подписаться</button>
 									</form>
 								</div>
-								<ul class="uk-list-stock uk-child-width-1-2@s" data-uk-grid>
+								<ul class="uk-grid uk-list-stock uk-child-width-1-2@s" data-uk-grid>
 									<li>
 										<a href="#" class="uk-card-stock uk-disabled">
 											<span class="city">Opel Харьков</span>
