--- a/markup/pages/test.html
+++ b/markup/pages/test.html
@@ -35,7 +35,7 @@
 
                     <nav class="uk-navbar-container uk-navbar-transparent">
                         <div class="uk-container">
-                            <div uk-navbar>
+                            <div class="uk-navbar" data-uk-navbar>
                                 <div class="uk-navbar-left">
                                     <a class="uk-logo uk-logo-default" href="#">
                                         <div class="uk-logo-image"><svg xmlns="http://www.w3.org/2000/svg" width="110" height="14" viewBox="0 0 110 14" fill="none"><path fill="#FBF659" d="M109.998 6.44H0v1.127h109.998V6.44z"/><path fill="#376BC7" fill-rule="evenodd" d="M86.32 8.086h5.76v3.331h2.765v2.122H83.538v-2.123h2.78v-3.33h.003zm20.892 5.455h-5.755V10.21h-2.761V8.09H110v2.12h-2.786v3.331h-.002zm-35.75-5.459h6.71l1.766 3.347h2.52v2.106h-12.27V11.43h2.977L71.46 8.082h.002zm-8.194 0h3.473l-1.707 3.345h2.222v2.104h-7.46v-2.104H61.5l1.768-3.347v.002zm-14.102 0h6.77l1.726 3.347h1.79v2.1H48.087v-2.106h2.826l-1.745-3.347-.002.006zm-7.937 0h3.45l-1.745 3.347h2.069v2.098h-8.218v-2.106h2.697l1.745-3.347.002.008zm-9.945-.01c-.304 2.233-1.573 3.878-3.102 3.878-1.457 0-2.715-1.645-3.002-3.877h-6.09c.678 3.409 4.525 5.925 9.097 5.927 4.848 0 8.75-2.513 9.405-5.922l-6.308-.005zM18.01 9.785h-4.243c-.73 1.3-2.09 2.155-4.225 2.153-1.524 0-2.744-1.646-3.048-3.878H0c.655 3.384 4.46 5.924 9.237 5.925 3.964 0 7.341-1.691 8.772-4.208v.008zm7.25-3.718H19.16c.563-3.5 4.481-5.992 9.125-5.99 4.947 0 8.864 2.49 9.45 5.993H31.38C31.1 3.79 29.83 2.118 28.279 2.118c-1.48 0-2.744 1.67-3.027 3.951l.008-.003zm20.489 0h-3.446L45.134.62H52.1l2.792 5.455h-6.804l-1.132-2.27-1.198 2.268-.008-.007zm22.105 0h-3.479L67.4.62h6.757l2.868 5.455h-6.631L69.128 3.59l-1.276 2.478.002-.002zm24.212 0h-5.76v-3.33h-2.764V.616h11.303v2.12h-2.78V6.07l.001-.003zM101.478.62h5.749v3.334h2.767v2.12H98.696V3.951h2.78V.622l.002-.002zM13.641 4.288h5.167V0H14.4v1.093A13.137 13.137 0 0 0 9.263.027C4.55.025.582 2.57 0 6.052h6.517C6.8 3.772 8.09 2.1 9.567 2.1c1.856.002 3.26.875 4.08 2.19l-.006-.002z" clip-rule="evenodd"/></svg></div>
@@ -55,7 +55,7 @@
 
                     <nav class="uk-navbar-container">
                         <div class="uk-container">
-                            <div uk-navbar>
+                            <div class="uk-navbar" data-uk-navbar>
                                 <div class="uk-navbar-left">
         
                                     <a class="uk-navbar-item uk-logo" href="#">Logo</a>
@@ -1655,7 +1655,7 @@
                                         <button type="submit" class="uk-button uk-button-primary uk-button-small">Показать</button>
                                     </div>
 
-                                </div>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -1709,8 +1709,8 @@
                         </div>
                     </div>
 
-                    <div class="uk-hero uk-hero-dealer-secondary uk-hero-height-full">
-                        <div class="uk-hero-background uk-hero-background-switcher">
+                    <div class="uk-hero uk-hero-contacts-map uk-hero-height-full">
+                        <div class="uk-hero-background">
                             <img class="uk-hero-object" src="%=static=%img/content/map-fullscreen-2.jpg" alt="">
                             <!--<iframe class="uk-hero-object" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2965.0824050173574!2d-93.63905729999999!3d41.998507000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sWebFilings%2C+University+Boulevard%2C+Ames%2C+IA!5e0!3m2!1sen!2sus!4v1390839289319" width="100%" height="200" frameborder="0" style="border:0"></iframe>-->
                         </div>
@@ -1745,11 +1745,7 @@
                                                 <a href="#" class="uk-navbar-secondary-back">{{Icon iconName="arrow-left"}}</a>
                                             </div>
                                             <div class="uk-navbar-secondary-body">
-                                                <div class="uk-navbar-secondary-item uk-margin-auto-right">Официальный дилер Рено в Харькове</div>
-                                                <ul class="uk-navbar-secondary-nav" data-uk-switcher="connect: .uk-hero-background-switcher">
-                                                    <li class="uk-active"><a href="#">Карта</a></li>
-                                                    <li><a href="#">Фото</a></li>
-                                                </ul>
+                                                <div class="uk-navbar-secondary-item uk-margin-auto-right"><a href="#" class="uk-link">Все города</a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -1797,6 +1793,26 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="uk-section uk-section-seo">
+                        <div class="uk-section-foreground">
+                            <div class="uk-container">
+                                <div class="uk-seo">
+                                    Новые и подержанные машины в наше время все больше продаются на специализированных автомобильных интернет-ресурсах. Наиболее известный и престижный из них — сайт auto.ria.com. Здесь собрана самая большая база бесплатных объявлений о продаже Renault в Днепре и других населенных пунктах Украины. Офлайн автобазар Днепр (Днепропетровск) распложен на улице Волгоградской. Однако автопродажи Renault в Днепре в последние годы осуществляются по большей части на сайте auto.ria.com. Это удобнее, быстрее и безопаснее. Обширная база объявлений сайта AUTO.RIA о продаже Renault в Днепре находится в вашем распоряжении круглосуточно, семь дней в неделю, без выходных. Каждый день на портале продается более 1400 автомобилей, при этом сайт посещают ежедневно около 6 миллионов украинцев. Чтобы купить б/у Renault в Днепре, вам достаточно зайти на сайт и выбрать среди множества объявлений о продаже нужное именно вам. Вследствие того, что производители Renault применяют в своих автомобилях наиболее качественные материалы и используют самые современные технологии, Renault в Днепре славятся своей надежностью, проходимостью, стильным внешним видом, экономичностью и плавностью хода, практически независимо от пробега автомобиля. Подержанные Renault в Днепре всегда пользовались и пользуются уважением среди почитателей автотранспорта. Для зарегистрированных пользователей наш сайт учредил новую программу — «Авто проверено AUTO.RIA.com», которая разработана для желающих подтвердить хорошее состояние выбранного транспортного средства перед покупкой, не растрачивая при этом время на поездку в другой населенный пункт. Программа также заинтересует продавцов машин, желающих повысить доверие к своему авто и побыстрее продать транспортное средство. Сделав заказ и пройдя комплексную диагностику, вы получите:  Отметку о проверке транспортного средства.  Повышенное доверие к вашей машине, так как теперь покупатели смогут ознакомиться с диагностическим протоколом. Программа гарантирует, что выбранная вами подержанная Renault в Днепре пройдет диагностику на лучших станциях технического обслуживания Украины, а результаты проверки будут доступны заказчику, что исключает подделку данных о техническом состоянии машины. Источник: https://auto.ria.com/car/renault/city/dnepr-dnepropetrovsk/ © AUTO.RIA.com™
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="uk-container">
+                        <div class="uk-chips">
+                            <a href="#" class="uk-chip" data-uk-icon="icon: close">Автоматическая КПП</a>
+                            <a href="#" class="uk-chip" data-uk-icon="icon: close">Дизель</a>
+                            <a href="#" class="uk-chip" data-uk-icon="icon: close">Передний привод</a>
+                            <a href="#" class="uk-chip" data-uk-icon="icon: close">2.0</a>
+                            <a href="#" class="uk-chip-reset">Сбросить все</a>
                         </div>
                     </div>
 
