--- a/markup/pages/start.html
+++ b/markup/pages/start.html
@@ -58,6 +58,13 @@
                         </ul>
                         <hr>
                         <ul>
+                            <li><a href="partners.html">Partners</a></li>
+                            <li><a href="success-story.html">Success story</a></li>
+                            <li><a href="success-stories.html">Success stories</a></li>
+                            <li><a href="souvenirs.html">Souvenirs</a></li>
+                        </ul>
+                        <hr>
+                        <ul>
                             <li><a href="test.html">Test</a></li>
                             <li><a href="components.html">Components</a></li>
                         </ul>
