--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -38,6 +38,7 @@
                         <hr>
                         <ul>
                             <li><a href="contacts-map.html">Contacts map</a></li>
+                            <li><a href="contacts.html">Contacts</a></li>
                         </ul>
                         <hr>
                         <ul>
@@ -59,6 +60,7 @@
                         <hr>
                         <ul>
                             <li><a href="partners.html">Partners</a></li>
+                            <li><a href="partnership.html">Partnership</a></li>
                             <li><a href="success-story.html">Success story</a></li>
                             <li><a href="success-stories.html">Success stories</a></li>
                             <li><a href="souvenirs.html">Souvenirs</a></li>
