add drilldown add modal fix menu

--- a/markup/pages/home.html
+++ b/markup/pages/home.html
@@ -822,9 +822,9 @@
                         <!-- TODO: ссылки на карты менять в самом файле map.svg -->
                         <img data-uk-svg class="uk-preserve" src="%=static=%img/general/map.svg" alt="">
                     </div>
-                    <div class="uk-section-foreground uk-width-2-3@s uk-width-1-2@m">
+                    <div class="uk-section-foreground">
                         <div class="uk-container">
-                            <div>
+                            <div class="uk-width-2-3@s uk-width-1-2@m">
                                 <p class="uk-text-lead">
                                     Солли Плюс — открытая и дружелюбная команда профессионалов. Нам важно мнение наших клиентов. Благодаря вам мы становимся лучше.
                                 </p>
