--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -22,6 +22,7 @@
                             <li><a href="car.html">Car</a></li>
                             <li><a href="cars.html">Cars</a></li>
                             <li><a href="cars-empty.html">Cars empty</a></li>
+                            <li><a href="viptaxi.html">VIP TAXI</a></li>
                         </ul>
                         <hr>
                         <ul>
