--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -23,6 +23,7 @@
                             <li><a href="cars.html">Cars</a></li>
                             <li><a href="cars-empty.html">Cars empty</a></li>
                             <li><a href="viptaxi.html">VIP TAXI</a></li>
+                            <li><a href="service.html">Service</a></li>
                         </ul>
                         <hr>
                         <ul>
