--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -69,6 +69,10 @@
                         </ul>
                         <hr>
                         <ul>
+                            <li><a href="credit.html">Credit</a></li>
+                        </ul>
+                        <hr>
+                        <ul>
                             <li><a href="test.html">Test</a></li>
                             <li><a href="components.html">Components</a></li>
                         </ul>
