--- a/markup/pages/modals.html
+++ b/markup/pages/modals.html
@@ -17,13 +17,141 @@
 
                 <!-- This is the modal -->
                 <div id="modal-example" uk-modal>
-                    <div class="uk-modal-dialog uk-modal-body">
-                        <button class="uk-modal-close-outside" type="button" data-uk-close></button>
-                        <h2 class="uk-modal-title">Записаться на тест-драйв</h2>
-                        <form action="#" class="uk-form uk-form-testdrive">
-                          
-                        </form>
-                    </div>
+									<div class="uk-modal-dialog uk-modal-body">
+										<button class="uk-modal-close-outside" type="button" data-uk-close></button>
+										<h2 class="uk-modal-title">Записаться на тест-драйв</h2>
+										<form action="#" class="uk-form uk-form-testdrive uk-form-width-large">
+											<div>
+												<select class="uk-select uk-select-primary">
+													<option value="" disabled selected>Выберите марку авто</option>
+													<option value="Mercedes-Benz">Mercedes-Benz</option>
+													<option value="Volkswagen">Volkswagen</option>
+													<option value="Renault">Renault</option>
+													<option value="Opel">Opel</option>
+													<option value="Skoda">Skoda</option>
+													<option value="Ravon">Ravon</option>
+												</select>
+											</div>
+										</form>
+										<h6>Выберите модель</h6>
+										<div class="swiper-container uk-models-hightlight">
+												<!-- Additional required wrapper -->
+												<div class="swiper-wrapper uk-grid uk-child-width-1-3@s uk-grid-match" data-uk-grid="">
+														<!-- Slides -->
+														<div class="swiper-slide uk-first-column">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-1.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-2.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-3.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-4.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-1.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-2.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-3.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="/static/img/content/img-4.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+												</div>
+												<!-- If we need pagination -->
+												<div class="swiper-pagination"></div>
+
+												<!-- If we need navigation buttons -->
+												<div class="swiper-button-prev"></div>
+												<div class="swiper-button-next"></div>
+
+												<!-- If we need scrollbar -->
+												<div class="swiper-scrollbar"></div>
+										</div>
+										<div class="uk-grid">
+											<div class="uk-col">
+												<h6>Желаемая дата</h6>
+												<form action="#">
+													<input data-toggle="datepicker">
+												</form>
+											</div>
+											<div class="uk-col">
+												<h6>Контактная информация</h6>
+												<form action="#">
+
+												</form>
+											</div>
+										</div>
+									</div>
                 </div>
     
             </div>
