--- a/markup/pages/contacts.html
+++ b/markup/pages/contacts.html
@@ -99,9 +99,9 @@
 									<!-- TODO: ссылки на карты менять в самом файле map.svg -->
 									<img data-uk-svg class="uk-preserve" src="%=static=%img/general/map.svg" alt="">
 							</div>
-							<div class="uk-section-foreground uk-width-2-3@s uk-width-1-2@m">
+							<div class="uk-section-foreground uk-width-1-2@s">
 								<div class="uk-container">
-									<div class="uk-grid uk-child-width-1-2@s" uk-grid="masonry: true" data-uk-grid>
+									<div class="uk-grid uk-child-width-1-2" uk-grid="masonry: true" data-uk-grid>
 										<div class="uk-sity-shops-block">
 											<h4 class="uk-sity-name">Харьков</h4>
 											<ul class="uk-shops-list">
