--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -73,6 +73,7 @@
                         </ul>
                         <hr>
                         <ul>
+                            <li><a href="modals.html">Modals</a></li>
                             <li><a href="test.html">Test</a></li>
                             <li><a href="components.html">Components</a></li>
                         </ul>
