--- a/markup/pages/modals.html
+++ b/markup/pages/modals.html
@@ -203,16 +203,18 @@
 													<input data-toggle="datepicker" class="uk-input">
 												</div>
 											</div>
-											<div class="uk-col-bottom uk-grid uk-width-1-1" data-uk-grid>
-												<h6 class="uk-width-1-1 uk-text-center">Контактная информация</h6>
-												<div class="uk-width-1-1 uk-width-1-2@s">
-													<input type="text" class="uk-input" placeholder="Ваше имя">
-												</div>
-												<div class="uk-width-1-1 uk-width-1-2@s">
-														<input type="tel" class="uk-input" placeholder="Телефон">
-												</div>
-												<div class="uk-width-1-1 uk-text-center">
-													<button class="uk-button uk-button-primary uk-button-small">Записаться на тест-драйв</button>
+											<div class="uk-width-1-1 uk-margin-large-top">
+												<div class="uk-col-bottom uk-grid" data-uk-grid>
+													<h6 class="uk-width-1-1 uk-text-center">Контактная информация</h6>
+													<div class="uk-width-1-2@s">
+														<input type="text" class="uk-input" placeholder="Ваше имя">
+													</div>
+													<div class="uk-width-1-2@s">
+															<input type="tel" class="uk-input" placeholder="Телефон">
+													</div>
+													<div class="uk-width-1-1 uk-text-center">
+														<button class="uk-button uk-button-primary uk-button-small">Записаться на тест-драйв</button>
+													</div>
 												</div>
 											</div>
 											
@@ -237,16 +239,18 @@
 											<div class="uk-margin-large-bottom">
 												<textarea class="uk-input uk-textarea" placeholder="Текст сообщения"></textarea>
 											</div>
-											<div class="uk-col-bottom uk-grid uk-width-1-1" data-uk-grid>
-												<h6 class="uk-width-1-1 uk-text-center">Контактная информация</h6>
-												<div class="uk-width-1-1 uk-width-1-2@s">
-													<input type="text" class="uk-input" placeholder="Ваше имя">
-												</div>
-												<div class="uk-width-1-1 uk-width-1-2@s">
-													<input type="tel" class="uk-input" placeholder="Телефон">
-												</div>
-												<div class="uk-width-1-1 uk-text-center">
-													<button class="uk-button uk-button-primary uk-button-small">Оставить заявку консультанту</button>
+											<div class="uk-width-1-1 uk-margin-large-top">
+												<div class="uk-col-bottom uk-grid" data-uk-grid>
+													<h6 class="uk-width-1-1 uk-text-center">Контактная информация</h6>
+													<div class="uk-width-1-2@s">
+														<input type="text" class="uk-input" placeholder="Ваше имя">
+													</div>
+													<div class="uk-width-1-2@s">
+															<input type="tel" class="uk-input" placeholder="Телефон">
+													</div>
+													<div class="uk-width-1-1 uk-text-center">
+														<button class="uk-button uk-button-primary uk-button-small">Записаться на тест-драйв</button>
+													</div>
 												</div>
 											</div>
 										</form>
@@ -268,6 +272,14 @@
 											</div>
 											<div class="uk-col uk-width-1-2@s">
 												<h6>Загрузка файлов</h6>
+												<div class="uk-resume-loading uk-margin-medium-bottom">
+													<a href="#" class="uk-loading">Прикрепите резюме</a>
+													<span class="uk-note">Загрузить файл (pdf, doc, txt)</span>
+												</div>
+												<div class="uk-photo-loading">
+													<a href="#" class="uk-loading">Прикрепите ваше фото</a>
+													<span class="uk-uploaded-file">myphoto.jpg</span>
+												</div>
 											</div>
 											<div class="uk-width-1-1 uk-text-center">
 												<button class="uk-button uk-button-primary uk-button-small">Оставить заявку консультанту</button>
@@ -294,16 +306,22 @@
 											</div>
 											<div class="uk-col">
 												<div>
-													<a href="#" class="uk-card-car">
+													<div class="uk-card-car">
 														<div class="uk-card-img"><img src="%=static=%img/content/car-img-1.jpg" alt="car"></div>
 														<div class="uk-card-body">
 															<h6 class="uk-card-title">Volkswagen New Touareg 3.6 TDI Comfortline AT 2018</h6>
+															<ul class="uk-card-specification">
+																<li>Двигатель:<span class="uk-specification-indicator">2.0, Бензин</span></li>
+																<li>Коробка передач:<span class="uk-specification-indicator">Автомат</span></li>
+																<li>Привод:<span class="uk-specification-indicator">Передний</span></li>
+																<li>Комплектация:<span class="uk-specification-indicator">Comfort</span></li>
+															</ul>
 															<div class="uk-price-holder">
 																<span class="uk-card-price">16 360 000 грн</span>
 																<span class="uk-card-real-price"><strike>13 360 000 грн</strike></span>
 															</div>
 														</div>
-													</a>
+													</div>
 												</div>
 											</div>
 										</form>
