trade-in partnership

--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -66,6 +66,8 @@
                             <li><a href="success-story.html">Success story</a></li>
                             <li><a href="success-stories.html">Success stories</a></li>
                             <li><a href="souvenirs.html">Souvenirs</a></li>
+                            <li><a href="trade-in.html">Trade in</a></li>
+                            <li><a href="corporate-clients.html">Corporate clients</a></li>
                         </ul>
                         <hr>
                         <ul>
