--- a/markup/pages/partnership.html
+++ b/markup/pages/partnership.html
@@ -19,14 +19,54 @@
 
 					<section class="uk-section uk-section-partnership">
 						<div class="uk-container">
-							<div class="uk-heading uk-text-center">
-								<h1 class="uk-heading-title">Сотрудничество</h1>
+							<div class="uk-heading uk-text-center uk-margin-large-bottom">
+								<h1 class="uk-heading-title uk-margin-medium-bottom">Сотрудничество</h1>
 								<p>Солли Плюс реализует почти весь модельный ряд легковых автомобилей и внедорожников. Mercedes-Benz предоставляет сервис, качество которого контролируется компанией.</p>
 							</div>
-							<div class="uk-grid">
-								<div class="uk-row">
-									<div class="uk-col uk-width-1-3@s"></div>
-									<div class="uk-col uk-width-2-3@s"></div>
+							<div class="uk-bg-decore">{{Icon iconName="bg-decore-1"}}</div>
+							<div class="uk-grid" data-uk-grid>
+								<div class="uk-col uk-width-1-2@s uk-width-1-3@l">
+									<div class="uk-phone-block">
+										<h6 class="uk-contact-title">Отдел продаж</h6>
+										<a href="tel:0577525777" class="uk-contact-phone">(057) 752-57-77</a>
+										<a href="https://www.marketing@sollyplus.com" class="uk-site-link">marketing@sollyplus.com</a>
+									</div>
+								</div>
+								<div class="uk-col uk-width-1-2@s uk-width-2-3@l">
+									<div class="uk-card-partnership">
+										<div class="uk-card-quote uk-background-14">
+											<h3 class="uk-card-title">Сотрудничество и взаимная поддержка между компаниями Солли Плюс являются залогом устойчивого роста всего холдинга</h3>
+										</div>
+										<div class="uk-card uk-card-person-2">
+											<div class="uk-card-top">
+												<div class="uk-card-person-avatar">
+													<img src="%=static=%img/content/person-2.jpg" alt="">
+												</div>
+											</div>
+											<div class="uk-card-body">
+												<div class="uk-card-person-name">Екатерина Гаврикова</div>
+												<div class="uk-card-person-position">Руководитель отдела маркетинга</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="uk-col uk-width-3-4@s">
+									<div class="uk-card-partnership uk-card-partnership-2">
+										<div class="uk-card-quote">
+											<h3 class="uk-card-title">Cреди наших партнеров уже более 20 компаний	и мы открыткы к новому сотрудничеству</h3>
+										</div>
+										<div class="uk-card uk-card-person-2">
+											<div class="uk-card-top">
+												<div class="uk-card-person-avatar">
+													<img src="%=static=%img/content/person.jpg" alt="">
+												</div>
+											</div>
+											<div class="uk-card-body">
+												<div class="uk-card-person-name">Олег Пучков</div>
+												<div class="uk-card-person-position">Генеральный директор Солли Плюс</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
