--- a/markup/pages/cars-empty.html
+++ b/markup/pages/cars-empty.html
@@ -18,6 +18,7 @@
             {{> navbar/navbar}}
 
             <div class="uk-section uk-section-cars-empty">
+                <div class="uk-section-background-decore">{{Icon iconName="bg-decore-4"}}</div>
                 <div class="uk-section-foreground">
                     <div class="uk-container">
                         <div class="uk-heading">
