--- a/markup/pages/contacts.html
+++ b/markup/pages/contacts.html
@@ -17,6 +17,7 @@
 				<div class="uk-page-body">
 
 					<div class="uk-hero uk-hero-contacts">
+						<div class="uk-section-background-decore">{{Icon iconName="bg-decore-8"}}</div>
 						<div class="uk-hero-background">
 								<img class="uk-hero-object" src="%=static=%img/content/hero-image-4.jpg" alt="">
 						</div>
@@ -54,7 +55,7 @@
 				</div>
 					<section class="uk-section uk-section-contacts">
 						<div class="uk-container">
-							<h3 class="uk-section-title">Написать директору</h3>
+							<h3 class="uk-section-title uk-margin-large-bottom">Написать директору</h3>
 							<div class="uk-grid uk-child-width-1-2@s" data-uk-grid>
 								<div class="uk-col">
 									<form action="#" class="uk-form-contact uk-grid uk-child-width-1-1" data-uk-grid >
