--- a/markup/pages/home.html
+++ b/markup/pages/home.html
@@ -210,6 +210,7 @@
                 </div>
 
                 <div class="uk-section uk-section-filter-cars">
+										<div class="uk-section-background-decore">{{Icon iconName="bg-decore-2"}}</div>
                     <div class="uk-section-background uk-background-muted"></div>
                     <div class="uk-section-foreground">
                         <div class="uk-container">
@@ -635,6 +636,7 @@
                 </div>
 
                 <div class="uk-section uk-section-about-us">
+					<div class="uk-section-background-decore">{{Icon iconName="bg-decore-3"}}</div>
                     <div class="uk-section-background uk-background-muted"></div>
                     <div class="uk-section-foreground">
                         <div class="uk-container">
