--- a/markup/pages/stock-empty.html
+++ b/markup/pages/stock-empty.html
@@ -40,6 +40,7 @@
 									</div>
 								</form>
 								<div class="uk-not-found-block uk-margin-large-bottom">
+									<div class="uk-section-background-decore">{{Icon iconName="bg-decore-5"}}</div>
 									<h3>К сожалению, на данный момент активных акций нет</h3>
 									<p>Подпишитесь на нашу рассылку. Вы будете одними из первых узнавать о новых акциях, новостях и мероприятиях Солли Плюс.</p>
 									<form action="#" class="uk-form uk-form-subscription uk-grid" data-uk-grid="margin: uk-margin-small-top">
