--- a/markup/pages/vacancies.html
+++ b/markup/pages/vacancies.html
@@ -24,6 +24,7 @@
 								</div>
 								<div class="uk-grid uk-flex-row-reverse" data-uk-grid>
 									<div class="uk-width-2-5@m uk-filter-vacancy-holder">
+										<div class="uk-section-background-decore">{{Icon iconName="bg-decore-3"}}</div>
 										<form action="#" class="uk-filter-vacancy">
 											<div>
 												<select class="uk-select uk-select-secondary">
