--- a/markup/pages/vacancy-empty.html
+++ b/markup/pages/vacancy-empty.html
@@ -40,6 +40,7 @@
 									</div>
 									<div class="uk-width-3-5@m">
 										<div class="uk-not-found-block uk-margin-large-bottom">
+											<div class="uk-section-background-decore">{{Icon iconName="bg-decore-7"}}</div>
 											<h3>К сожалению, на данный момент актуальных вакансий нет</h3>
 											<p>Подпишитесь на нашу рассылку. Вы будете одними из первых узнавать о новых вакансиях Солли Плюс.</p>
 											<form action="#" class="uk-form uk-form-subscription uk-grid" data-uk-grid="margin: uk-margin-small-top">
