--- a/builds/partners.html
+++ b/builds/partners.html
@@ -16,7 +16,7 @@
 
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/mainn5zha.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/maincqvjyu.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
 
         <meta property="og:title" content="" />
@@ -1323,7 +1323,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 
         <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-        <script src="static/js/mainn5zha.min.js"></script>
+        <script src="static/js/maincqvjyu.min.js"></script>
     </body>
 
 </html>
