park-drive bosch-service auto-element

--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -24,6 +24,9 @@
                         <li><a href="cars-empty.html">Cars empty</a></li>
                         <li><a href="viptaxi.html">VIP TAXI</a></li>
                         <li><a href="service.html">Service</a></li>
+                        <li><a href="bosch-service.html">Bosch service</a></li>
+                        <li><a href="park-drive.html">Parkdrive</a></li>
+                        <li><a href="auto-element.html">Auto element</a></li>
                     </ul>
                     <hr>
                     <ul>
