about-team page

--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -73,6 +73,7 @@
                         <li><a href="souvenirs.html">Souvenirs</a></li>
                         <li><a href="trade-in.html">Trade in</a></li>
                         <li><a href="corporate-clients.html">Corporate clients</a></li>
+                        <li><a href="about-team.html">About team</a></li>
                     </ul>
                     <hr>
                     <ul>
