--- a/markup/pages/company-history.html
+++ b/markup/pages/company-history.html
@@ -278,7 +278,7 @@
                 <div class="uk-section">
                     <div class="uk-section-foreground">
                         <div class="uk-container">
-                            <div class="uk-grid uk-margin-large-bottom" data-uk-grid>
+                            <div class="uk-grid uk-margin-medium-bottom" data-uk-grid>
                                 <div class="uk-width-1-2@s">
                                     <div class="uk-card-succes-story-4 uk-card-succes-story-4-large">
                                         <div class="uk-card-background">
@@ -369,7 +369,7 @@
                     </div>
                 </div>
 
-                <div class="uk-section uk-text-center">
+                <div class="uk-section uk-section-xlarge uk-text-center">
                     <div class="uk-section-foreground">
                         <div class="uk-container uk-container-small">
                             <h4>Больше всего в автосалонах компании ценятся профессиональные качества специалистов, честность и открытость в отношениях с клиентами</h4>
