--- a/markup/pages/home.html
+++ b/markup/pages/home.html
@@ -258,9 +258,9 @@
 
                             <div class="uk-price uk-filter-price" data-nouislider>
                                 <div class="uk-price-inputs">
-                                    <input type="text" data-nouislider-from class="uk-input uk-input-secondary">
+                                    <input type="text" data-nouislider-from class="uk-input uk-input-secondary" value="0">
                                     <div class="uk-price-divider"></div>
-                                    <input type="text" data-nouislider-to class="uk-input uk-input-secondary">
+                                    <input type="text" data-nouislider-to class="uk-input uk-input-secondary" value="1000">
                                 </div>
                                 <div class="uk-price-range">
                                     <div data-nouislider-range></div>
