--- a/markup/pages/strahovanie.html
+++ b/markup/pages/strahovanie.html
@@ -33,7 +33,7 @@
             <div class="uk-section">
                 <div class="uk-section-foreground">
                     <div class="uk-container">
-                        <h2 class="uk-h1 uk-text-primary"><b>КАСКО «ALL Risks»</b></h2>
+                        <h2 class="uk-h1 uk-text-primary-dark"><b>КАСКО «ALL Risks»</b></h2>
                         <p class="uk-h4 uk-margin-large-bottom">Застраховав свой автомобиль по программе «ALL RISKS» (от всех рисков), вы получите возмещение ущерба в случае какого-либо внешнего физического воздействия в результате случайных и непредвиденных событий.</p>
                         <div class="uk-grid uk-margin-large-bottom" data-uk-grid>
                             <div class="uk-width-1-2@s">
@@ -82,8 +82,8 @@
                 </div>
                 <div class="uk-section-foreground">
                     <div class="uk-container">
-                        <div class="uk-grid uk-child-width-1-2@s" data-uk-grid>
-                            <div>
+                        <div class="uk-grid" data-uk-grid>
+                            <div class="uk-width-2-3@m">
                                 <h2>Конкурентные преимущества КАСКО «ALL Risks»</h2>
                                 <p>В настоящее время программа «ALL Risks» обеспечивает наиболее широкое страховое покрытие. Страховое возмещение по программе «ALL Risks» выплачивается не зависимо от того, кто был виновником ДТП.</p>
                                 <div class="uk-grid" data-uk-grid>
@@ -104,7 +104,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div>
+                            <div class="uk-width-1-3@m">
                                 <div class="uk-grid uk-child-width-1-1" data-uk-grid>
                                     <div>
                                         <div class="uk-panel uk-panel-outline">
