--- a/markup/pages/about-team.html
+++ b/markup/pages/about-team.html
@@ -47,40 +47,40 @@
                   <div class="swiper-container uk-swiper-sport">
                     <div class="swiper-wrapper uk-grid uk-child-width-1-3@s uk-grid-match" data-uk-grid>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-1.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-2.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-3.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-1.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -109,40 +109,40 @@
                   <div class="swiper-container uk-swiper-sport">
                     <div class="swiper-wrapper uk-grid uk-child-width-1-3@s uk-grid-match" data-uk-grid>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-4.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-5.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-4.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a href="#" class="uk-card uk-card-sport">
+                        <div class="uk-card uk-card-sport">
                           <div class="uk-card-img">
                             <img src="%=static=%img/content/sport-img-5.jpg" alt="">
                           </div>
                           <h5 class="uk-card-title">Гавриленко Андрей</h5>
                           <div class="uk-card-description">системный администратор Солли Плюс</div>
-                        </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -166,7 +166,7 @@
                   <div class="swiper-container uk-swiper-sport">
                     <div class="swiper-wrapper uk-grid uk-child-width-1-2@s uk-grid-match" data-uk-grid>
                       <div class="swiper-slide">
-                        <a class="uk-card uk-card-person-2">
+                        <div class="uk-card uk-card-person-2">
                           <div class="uk-card-top">
                             <div class="uk-card-person-avatar">
                               <img src="%=static=%img/content/sport-img-4.jpg" alt="">
@@ -177,10 +177,10 @@
                             <div class="uk-card-person-position">начальник малярного цеха Солли Плюс</div>
                             <p>Активно участвует в реконструкциях боевых действий Великой Отечественной войны, принимал участие в съемках фильма «По законам военного времени-2», которые проходили в г. Харьков.</p>
                           </div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a class="uk-card uk-card-person-2">
+                        <div class="uk-card uk-card-person-2">
                           <div class="uk-card-top">
                             <div class="uk-card-person-avatar">
                               <img src="%=static=%img/content/sport-img-4.jpg" alt="">
@@ -191,10 +191,10 @@
                             <div class="uk-card-person-position">начальник малярного цеха Солли Плюс</div>
                             <p>Активно участвует в реконструкциях боевых действий Великой Отечественной войны, принимал участие в съемках фильма «По законам военного времени-2», которые проходили в г. Харьков.</p>
                           </div>
-                        </a>
+                        </div>
                       </div>
                       <div class="swiper-slide">
-                        <a class="uk-card uk-card-person-2">
+                        <div class="uk-card uk-card-person-2">
                           <div class="uk-card-top">
                             <div class="uk-card-person-avatar">
                               <img src="%=static=%img/content/sport-img-4.jpg" alt="">
@@ -205,7 +205,7 @@
                             <div class="uk-card-person-position">начальник малярного цеха Солли Плюс</div>
                             <p>Активно участвует в реконструкциях боевых действий Великой Отечественной войны, принимал участие в съемках фильма «По законам военного времени-2», которые проходили в г. Харьков.</p>
                           </div>
-                        </a>
+                        </div>
                       </div>
                     </div>
                   </div>
