--- a/markup/pages/contacts.html
+++ b/markup/pages/contacts.html
@@ -68,7 +68,7 @@
                                     <label><input class="uk-input" type="email" placeholder="Введите ваш e-mail"></label>
                                 </div>
                                 <div>
-                                    <label><textarea class="uk-input" placeholder="Текст сообщения"></textarea></label>
+                                    <label><textarea class="uk-textarea" placeholder="Текст сообщения"></textarea></label>
                                 </div>
                                 <div>
                                     <button class="uk-button uk-button-primary uk-button-small">Отправить сообщение</button>
