--- a/markup/pages/leasing.html
+++ b/markup/pages/leasing.html
@@ -94,14 +94,14 @@
                         <h2>Клиенты:</h2>
                         <div class="uk-grid uk-child-width-1-1 uk-child-width-1-3@s" data-uk-grid>
                             <div>
-                                <a href="#" class="uk-card-service-secondary">Частные лица</a>
+                                <div class="uk-card-service-secondary">Частные лица</div>
                             </div>
                             <div>
-                                <a href="#" class="uk-card-service-secondary">Компании</a>
+                                <div class="uk-card-service-secondary">Компании</div>
                             </div>
                             <div></div>
                             <div>
-                                <a href="#" class="uk-card-service-secondary">Частные лица-предприниматели</a>
+                                <div class="uk-card-service-secondary">Частные лица-предприниматели</div>
                             </div>
                             <div class="uk-width-1-2@s">
                                 <div class="uk-quote">
